# ozero-lang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/ozerolang/: config.h.in
src/: main.c
src/cli/: CMakeLists.txt  cli.c  cli.h  cli_parser.c  cli_parser.h  commands.c  commands.h  main.c  report.c  report.h
src/cli/commands/: check.c  create.c  fmt.c  help.c  repl.c  run.c
src/common/: CMakeLists.txt  defines.h  oz_assertions.h
src/common/error/: allocation_error.h  error.c  error.h
src/common/io/: color.h  logger.c  logger.h  terminal.c
src/common/log/: logger.c  logger.h  oz_assertions.h
src/common/memory/: allocator.h  arena_allocator.c  arena_allocator.h  system_allocator.c  system_allocator.h
src/common/string/: .clang-tidy  oz_string.c  oz_string.h  oz_strings.c  oz_strings.h  oz_utf8.c  oz_utf8.h
src/common/styler/: color.h  color_shorthands.h
src/common/terminal/: terminal.c  terminal.h
src/platform/: CMakeLists.txt  error.h  error_posix.c  error_win32.c  memory.h  memory_posix.c  memory_win32.c
tests/: CMakeLists.txt
tests/unit/: .clang-tidy  alloc_arena.c  alloc_system.c  cli_parser.c  string.c  string_utf8.c  terminal.c
